[package]
name = "pallet-did-rpc"
version = "4.0.0-dev"
authors = ["<felidae-team>"]
edition = "2021"
description = "RPC interface for the did pallet."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
pallet-did-rpc-runtime-api = { version = "1.0.0", path = "./runtime-api" }
pallet-did = { version = "4.0.0-dev", path = "../../did/" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-rpc = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
jsonrpc-core = "18.0.0"